--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">VolleyDemo</string>
+    <string name="app_name">ViewHolderAntiPattern</string>
 
     <string name="list_detail_digit">Digit: %1d</string>
     <string name="list_detail_digit_even">Is even: %1s</string>
