added a oct and fibonacci text views.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,10 +2,11 @@
 <resources>
 
     <string name="app_name">ViewHolderAntiPattern</string>
-
     <string name="list_detail_digit">Digit: %1d</string>
-    <string name="list_detail_digit_even">Is even: %1s</string>
-    <string name="list_detail_digit_prime">Is prime: %1s</string>
     <string name="list_detail_digit_hex">In hex: %1s</string>
+    <string name="list_detail_digit_oct">In oct: %1s</string>
+    <string name="list_detail_digit_even">Even: %1s</string>
+    <string name="list_detail_digit_prime">Prime: %1s</string>
+    <string name="list_detail_digit_fibonacci">Fibonacci: %1s</string>
 
 </resources>
